--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,26 @@
 {
     "version": 2,
-      "framework": null,
+    "framework": null,
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
-    "routes": [{
-        "src": "/(.*)",
-        "dest": "/api/index.php"
-    }],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/api/index.php"
+        }
+    ],
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://yourprojectdomain.com",
+        "APP_URL": "",
+        "APP_KEY": "base64:sE5Z9xSzAHsux3PSVd9xhPW+OV1Yl36pQFH2GPm3nHg=",
+        "DB_CONNECTION": "mysql",
+        "DB_HOST": "km5vka.h.filess.io",
+        "DB_PORT": "3306",
+        "DB_DATABASE": "Promosi_Mobil_plannedcry",
+        "DB_USERNAME": "Promosi_Mobil_plannedcry",
+        "DB_PASSWORD": "95855b816db90a85986488aa77f6441c63ef1a0b",
 
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
