--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,11 @@
     },
     "routes": [
         {
-            "src": "/css/(.*)", 
+            "handle": "filesystem"
+        },
+        {
+            "src": "/(.*)",
             "dest": "/api/index.php"
-            
         }
     ],
     "env": {
